fix link hover state on iOS

--- a/app/assets/stylesheets/facets.scss
+++ b/app/assets/stylesheets/facets.scss
@@ -43,7 +43,7 @@
 
   &.facets-hidden {
     .counter {
-      display: block;
+      display: bloc;
     }
 
     .facets-visible {
